parser.output
Grammar

    0 $accept: exprlist "end of file"

    1 exprlist: dnumexpr ";"
    2         | inumexpr ";"
    3         | exprlist dnumexpr ";"
    4         | exprlist inumexpr ";"

    5 dnumexpr: "dnum"
    6         | "(" dnumexpr ")"
    7         | dnumexpr "+" dnumexpr
    8         | dnumexpr "-" dnumexpr
    9         | dnumexpr "*" dnumexpr
   10         | dnumexpr "/" dnumexpr
   11         | dnumexpr "+" inumexpr
   12         | dnumexpr "-" inumexpr
   13         | dnumexpr "*" inumexpr
   14         | dnumexpr "/" inumexpr
   15         | inumexpr "+" dnumexpr
   16         | inumexpr "-" dnumexpr
   17         | inumexpr "*" dnumexpr
   18         | inumexpr "/" dnumexpr

   19 inumexpr: "inum"
   20         | "(" inumexpr ")"
   21         | inumexpr "+" inumexpr
   22         | inumexpr "-" inumexpr
   23         | inumexpr "*" inumexpr
   24         | inumexpr "/" inumexpr


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "+" <op> (258) 7 11 15 21
    "-" <op> (259) 8 12 16 22
    "*" <op> (260) 9 13 17 23
    "/" <op> (261) 10 14 18 24
    "(" <op> (262) 6 20
    ")" <op> (263) 6 20
    ";" <op> (264) 1 2 3 4
    "inum" <inum> (265) 19
    "dnum" <dnum> (266) 5


Nonterminals, with rules where they appear

    $accept (12)
        on left: 0
    exprlist (13)
        on left: 1 2 3 4
        on right: 0 3 4
    dnumexpr <dnum> (14)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 1 3 6 7 8 9 10 11 12 13 14 15 16 17 18
    inumexpr <inum> (15)
        on left: 19 20 21 22 23 24
        on right: 2 4 11 12 13 14 15 16 17 18 20 21 22 23 24


State 0

    0 $accept: • exprlist "end of file"
    1 exprlist: • dnumexpr ";"
    2         | • inumexpr ";"
    3         | • exprlist dnumexpr ";"
    4         | • exprlist inumexpr ";"
    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    exprlist  go to state 4
    dnumexpr  go to state 5
    inumexpr  go to state 6


State 1

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    6         | "(" • dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   20         | "(" • inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 7
    inumexpr  go to state 8


State 2

   19 inumexpr: "inum" •

    $default  reduce using rule 19 (inumexpr)


State 3

    5 dnumexpr: "dnum" •

    $default  reduce using rule 5 (dnumexpr)


State 4

    0 $accept: exprlist • "end of file"
    3 exprlist: exprlist • dnumexpr ";"
    4         | exprlist • inumexpr ";"
    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "end of file"  shift, and go to state 9
    "("            shift, and go to state 1
    "inum"         shift, and go to state 2
    "dnum"         shift, and go to state 3

    dnumexpr  go to state 10
    inumexpr  go to state 11


State 5

    1 exprlist: dnumexpr • ";"
    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr

    "+"  shift, and go to state 12
    "-"  shift, and go to state 13
    "*"  shift, and go to state 14
    "/"  shift, and go to state 15
    ";"  shift, and go to state 16


State 6

    2 exprlist: inumexpr • ";"
   15 dnumexpr: inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    "+"  shift, and go to state 17
    "-"  shift, and go to state 18
    "*"  shift, and go to state 19
    "/"  shift, and go to state 20
    ";"  shift, and go to state 21


State 7

    6 dnumexpr: "(" dnumexpr • ")"
    7         | dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr

    "+"  shift, and go to state 12
    "-"  shift, and go to state 13
    "*"  shift, and go to state 14
    "/"  shift, and go to state 15
    ")"  shift, and go to state 22


State 8

   15 dnumexpr: inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   20 inumexpr: "(" inumexpr • ")"
   21         | inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    "+"  shift, and go to state 17
    "-"  shift, and go to state 18
    "*"  shift, and go to state 19
    "/"  shift, and go to state 20
    ")"  shift, and go to state 23


State 9

    0 $accept: exprlist "end of file" •

    $default  accept


State 10

    3 exprlist: exprlist dnumexpr • ";"
    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr

    "+"  shift, and go to state 12
    "-"  shift, and go to state 13
    "*"  shift, and go to state 14
    "/"  shift, and go to state 15
    ";"  shift, and go to state 24


State 11

    4 exprlist: exprlist inumexpr • ";"
   15 dnumexpr: inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    "+"  shift, and go to state 17
    "-"  shift, and go to state 18
    "*"  shift, and go to state 19
    "/"  shift, and go to state 20
    ";"  shift, and go to state 25


State 12

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    7         | dnumexpr "+" • dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   11         | dnumexpr "+" • inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 26
    inumexpr  go to state 27


State 13

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    8         | dnumexpr "-" • dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   12         | dnumexpr "-" • inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 28
    inumexpr  go to state 29


State 14

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
    9         | dnumexpr "*" • dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   13         | dnumexpr "*" • inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 30
    inumexpr  go to state 31


State 15

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   10         | dnumexpr "/" • dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   14         | dnumexpr "/" • inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 32
    inumexpr  go to state 33


State 16

    1 exprlist: dnumexpr ";" •

    $default  reduce using rule 1 (exprlist)


State 17

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   15         | inumexpr "+" • dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   21         | inumexpr "+" • inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 34
    inumexpr  go to state 35


State 18

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   16         | inumexpr "-" • dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   22         | inumexpr "-" • inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 36
    inumexpr  go to state 37


State 19

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   17         | inumexpr "*" • dnumexpr
   18         | • inumexpr "/" dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   23         | inumexpr "*" • inumexpr
   24         | • inumexpr "/" inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 38
    inumexpr  go to state 39


State 20

    5 dnumexpr: • "dnum"
    6         | • "(" dnumexpr ")"
    7         | • dnumexpr "+" dnumexpr
    8         | • dnumexpr "-" dnumexpr
    9         | • dnumexpr "*" dnumexpr
   10         | • dnumexpr "/" dnumexpr
   11         | • dnumexpr "+" inumexpr
   12         | • dnumexpr "-" inumexpr
   13         | • dnumexpr "*" inumexpr
   14         | • dnumexpr "/" inumexpr
   15         | • inumexpr "+" dnumexpr
   16         | • inumexpr "-" dnumexpr
   17         | • inumexpr "*" dnumexpr
   18         | • inumexpr "/" dnumexpr
   18         | inumexpr "/" • dnumexpr
   19 inumexpr: • "inum"
   20         | • "(" inumexpr ")"
   21         | • inumexpr "+" inumexpr
   22         | • inumexpr "-" inumexpr
   23         | • inumexpr "*" inumexpr
   24         | • inumexpr "/" inumexpr
   24         | inumexpr "/" • inumexpr

    "("     shift, and go to state 1
    "inum"  shift, and go to state 2
    "dnum"  shift, and go to state 3

    dnumexpr  go to state 40
    inumexpr  go to state 41


State 21

    2 exprlist: inumexpr ";" •

    $default  reduce using rule 2 (exprlist)


State 22

    6 dnumexpr: "(" dnumexpr ")" •

    $default  reduce using rule 6 (dnumexpr)


State 23

   20 inumexpr: "(" inumexpr ")" •

    $default  reduce using rule 20 (inumexpr)


State 24

    3 exprlist: exprlist dnumexpr ";" •

    $default  reduce using rule 3 (exprlist)


State 25

    4 exprlist: exprlist inumexpr ";" •

    $default  reduce using rule 4 (exprlist)


State 26

    7 dnumexpr: dnumexpr • "+" dnumexpr
    7         | dnumexpr "+" dnumexpr •  ["+", "-", ")", ";"]
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr

    "*"  shift, and go to state 14
    "/"  shift, and go to state 15

    $default  reduce using rule 7 (dnumexpr)

    Conflict between rule 7 and token "+" resolved as reduce (%left "+").
    Conflict between rule 7 and token "-" resolved as reduce (%left "-").
    Conflict between rule 7 and token "*" resolved as shift ("+" < "*").
    Conflict between rule 7 and token "/" resolved as shift ("+" < "/").


State 27

   11 dnumexpr: dnumexpr "+" inumexpr •  ["+", "-", ")", ";"]
   15         | inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    "*"  shift, and go to state 19
    "/"  shift, and go to state 20

    $default  reduce using rule 11 (dnumexpr)

    Conflict between rule 11 and token "+" resolved as reduce (%left "+").
    Conflict between rule 11 and token "-" resolved as reduce (%left "-").
    Conflict between rule 11 and token "*" resolved as shift ("+" < "*").
    Conflict between rule 11 and token "/" resolved as shift ("+" < "/").


State 28

    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    8         | dnumexpr "-" dnumexpr •  ["+", "-", ")", ";"]
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr

    "*"  shift, and go to state 14
    "/"  shift, and go to state 15

    $default  reduce using rule 8 (dnumexpr)

    Conflict between rule 8 and token "+" resolved as reduce (%left "+").
    Conflict between rule 8 and token "-" resolved as reduce (%left "-").
    Conflict between rule 8 and token "*" resolved as shift ("-" < "*").
    Conflict between rule 8 and token "/" resolved as shift ("-" < "/").


State 29

   12 dnumexpr: dnumexpr "-" inumexpr •  ["+", "-", ")", ";"]
   15         | inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    "*"  shift, and go to state 19
    "/"  shift, and go to state 20

    $default  reduce using rule 12 (dnumexpr)

    Conflict between rule 12 and token "+" resolved as reduce (%left "+").
    Conflict between rule 12 and token "-" resolved as reduce (%left "-").
    Conflict between rule 12 and token "*" resolved as shift ("-" < "*").
    Conflict between rule 12 and token "/" resolved as shift ("-" < "/").


State 30

    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
    9         | dnumexpr "*" dnumexpr •  ["+", "-", "*", "/", ")", ";"]
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr

    $default  reduce using rule 9 (dnumexpr)

    Conflict between rule 9 and token "+" resolved as reduce ("+" < "*").
    Conflict between rule 9 and token "-" resolved as reduce ("-" < "*").
    Conflict between rule 9 and token "*" resolved as reduce (%left "*").
    Conflict between rule 9 and token "/" resolved as reduce (%left "/").


State 31

   13 dnumexpr: dnumexpr "*" inumexpr •  ["+", "-", "*", "/", ")", ";"]
   15         | inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    $default  reduce using rule 13 (dnumexpr)

    Conflict between rule 13 and token "+" resolved as reduce ("+" < "*").
    Conflict between rule 13 and token "-" resolved as reduce ("-" < "*").
    Conflict between rule 13 and token "*" resolved as reduce (%left "*").
    Conflict between rule 13 and token "/" resolved as reduce (%left "/").


State 32

    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   10         | dnumexpr "/" dnumexpr •  ["+", "-", "*", "/", ")", ";"]
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr

    $default  reduce using rule 10 (dnumexpr)

    Conflict between rule 10 and token "+" resolved as reduce ("+" < "/").
    Conflict between rule 10 and token "-" resolved as reduce ("-" < "/").
    Conflict between rule 10 and token "*" resolved as reduce (%left "*").
    Conflict between rule 10 and token "/" resolved as reduce (%left "/").


State 33

   14 dnumexpr: dnumexpr "/" inumexpr •  ["+", "-", "*", "/", ")", ";"]
   15         | inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    $default  reduce using rule 14 (dnumexpr)

    Conflict between rule 14 and token "+" resolved as reduce ("+" < "/").
    Conflict between rule 14 and token "-" resolved as reduce ("-" < "/").
    Conflict between rule 14 and token "*" resolved as reduce (%left "*").
    Conflict between rule 14 and token "/" resolved as reduce (%left "/").


State 34

    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr
   15         | inumexpr "+" dnumexpr •  ["+", "-", ")", ";"]

    "*"  shift, and go to state 14
    "/"  shift, and go to state 15

    $default  reduce using rule 15 (dnumexpr)

    Conflict between rule 15 and token "+" resolved as reduce (%left "+").
    Conflict between rule 15 and token "-" resolved as reduce (%left "-").
    Conflict between rule 15 and token "*" resolved as shift ("+" < "*").
    Conflict between rule 15 and token "/" resolved as shift ("+" < "/").


State 35

   15 dnumexpr: inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   21         | inumexpr "+" inumexpr •  ["+", "-", ")", ";"]
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    "*"  shift, and go to state 19
    "/"  shift, and go to state 20

    $default  reduce using rule 21 (inumexpr)

    Conflict between rule 21 and token "+" resolved as reduce (%left "+").
    Conflict between rule 21 and token "-" resolved as reduce (%left "-").
    Conflict between rule 21 and token "*" resolved as shift ("+" < "*").
    Conflict between rule 21 and token "/" resolved as shift ("+" < "/").


State 36

    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr
   16         | inumexpr "-" dnumexpr •  ["+", "-", ")", ";"]

    "*"  shift, and go to state 14
    "/"  shift, and go to state 15

    $default  reduce using rule 16 (dnumexpr)

    Conflict between rule 16 and token "+" resolved as reduce (%left "+").
    Conflict between rule 16 and token "-" resolved as reduce (%left "-").
    Conflict between rule 16 and token "*" resolved as shift ("-" < "*").
    Conflict between rule 16 and token "/" resolved as shift ("-" < "/").


State 37

   15 dnumexpr: inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   22         | inumexpr "-" inumexpr •  ["+", "-", ")", ";"]
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr

    "*"  shift, and go to state 19
    "/"  shift, and go to state 20

    $default  reduce using rule 22 (inumexpr)

    Conflict between rule 22 and token "+" resolved as reduce (%left "+").
    Conflict between rule 22 and token "-" resolved as reduce (%left "-").
    Conflict between rule 22 and token "*" resolved as shift ("-" < "*").
    Conflict between rule 22 and token "/" resolved as shift ("-" < "/").


State 38

    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr
   17         | inumexpr "*" dnumexpr •  ["+", "-", "*", "/", ")", ";"]

    $default  reduce using rule 17 (dnumexpr)

    Conflict between rule 17 and token "+" resolved as reduce ("+" < "*").
    Conflict between rule 17 and token "-" resolved as reduce ("-" < "*").
    Conflict between rule 17 and token "*" resolved as reduce (%left "*").
    Conflict between rule 17 and token "/" resolved as reduce (%left "/").


State 39

   15 dnumexpr: inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   23         | inumexpr "*" inumexpr •  ["+", "-", "*", "/", ")", ";"]
   24         | inumexpr • "/" inumexpr

    $default  reduce using rule 23 (inumexpr)

    Conflict between rule 23 and token "+" resolved as reduce ("+" < "*").
    Conflict between rule 23 and token "-" resolved as reduce ("-" < "*").
    Conflict between rule 23 and token "*" resolved as reduce (%left "*").
    Conflict between rule 23 and token "/" resolved as reduce (%left "/").


State 40

    7 dnumexpr: dnumexpr • "+" dnumexpr
    8         | dnumexpr • "-" dnumexpr
    9         | dnumexpr • "*" dnumexpr
   10         | dnumexpr • "/" dnumexpr
   11         | dnumexpr • "+" inumexpr
   12         | dnumexpr • "-" inumexpr
   13         | dnumexpr • "*" inumexpr
   14         | dnumexpr • "/" inumexpr
   18         | inumexpr "/" dnumexpr •  ["+", "-", "*", "/", ")", ";"]

    $default  reduce using rule 18 (dnumexpr)

    Conflict between rule 18 and token "+" resolved as reduce ("+" < "/").
    Conflict between rule 18 and token "-" resolved as reduce ("-" < "/").
    Conflict between rule 18 and token "*" resolved as reduce (%left "*").
    Conflict between rule 18 and token "/" resolved as reduce (%left "/").


State 41

   15 dnumexpr: inumexpr • "+" dnumexpr
   16         | inumexpr • "-" dnumexpr
   17         | inumexpr • "*" dnumexpr
   18         | inumexpr • "/" dnumexpr
   21 inumexpr: inumexpr • "+" inumexpr
   22         | inumexpr • "-" inumexpr
   23         | inumexpr • "*" inumexpr
   24         | inumexpr • "/" inumexpr
   24         | inumexpr "/" inumexpr •  ["+", "-", "*", "/", ")", ";"]

    $default  reduce using rule 24 (inumexpr)

    Conflict between rule 24 and token "+" resolved as reduce ("+" < "/").
    Conflict between rule 24 and token "-" resolved as reduce ("-" < "/").
    Conflict between rule 24 and token "*" resolved as reduce (%left "*").
    Conflict between rule 24 and token "/" resolved as reduce (%left "/").
